[package]
name = "resizing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
fast_image_resize = "2.5.0"
image = "0.24.5"
serde = {version="1", features=["derive"]}
serde_json = "1"
derive_more = "0.99.17"